--- a/css/main.css
+++ b/css/main.css
@@ -341,15 +341,6 @@ template {
   display: none;
 }
 
-body {
-  font-family: 'Raleway';
-}
-
-.container {
-  max-width: 1120px;
-  margin: 0 auto;
-}
-
 .site-header {
   margin-top: 20px;
   padding-bottom: 20px;
@@ -373,6 +364,10 @@ body {
 
 .nav {
   background-color: #004897;
+}
+
+.toggle-bars, .toggle-times, .toggle-check {
+  display: none;
 }
 
 .site-nav {
@@ -433,18 +428,36 @@ body {
   left: -20px;
 }
 
+@media screen and (max-width: 768px) {
+  .site-header {
+    max-width: 767px;
+  }
+  .site-header_logo > img {
+    margin-right: 20px;
+  }
+  .site-nav__list {
+    max-width: 30%;
+    margin-left: -50px;
+  }
+  .site-nav__item {
+    padding: 1.6875rem 0.75rem 2.2rem 0.75rem;
+  }
+  .site-nav__search {
+    margin-left: -160px;
+  }
+  .site-nav__search-input {
+    width: 170px;
+  }
+}
+
 .main {
-  margin-top: -100px;
   background-size: cover;
   background-image: url("/img/header/pictures.png");
   background-repeat: no-repeat;
-  padding: 244px 0 289px 0;
-  background-position: -150px 100px;
 }
 
 .main__title {
   text-transform: uppercase;
-  left: 00px;
   text-align: center;
   font-size: 150px;
   color: white;
@@ -465,15 +478,32 @@ body {
 }
 
 .main-arrow-position1 {
-  position: absolute;
-  top: 380px;
-  left: 1180px;
+  position: relative;
+  top: 280px;
+  left: 100px;
 }
 
 .main-arrow-position2 {
-  position: absolute;
-  top: 380px;
-  left: 30px;
+  position: relative;
+  top: -289px;
+  left: 1150px;
+}
+
+@media screen and (max-width: 768px) {
+  .main {
+    max-width: 767px;
+    margin-top: -1px;
+    padding: 100px 0;
+  }
+  .main__title {
+    font-size: 50px;
+  }
+  .main__img {
+    display: none;
+  }
+  .main-arrow {
+    display: none;
+  }
 }
 
 .description {
@@ -565,6 +595,40 @@ body {
   color: white;
 }
 
+@media screen and (max-width: 768px) {
+  .description-box {
+    display: block;
+  }
+  .description-box_card {
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 60px;
+  }
+  .description-data {
+    max-width: 768px;
+  }
+  .description-data-container {
+    display: block;
+  }
+  .description-data-content {
+    margin-left: 125px;
+    text-align: center;
+  }
+  .description-data__title {
+    display: inline-block;
+    text-align: center;
+    margin-left: -100px;
+  }
+  .description-data__button {
+    position: relative;
+    left: -60px;
+  }
+  .description__img {
+    margin-left: 100px;
+    margin-bottom: 30px;
+  }
+}
+
 .clients {
   background-color: #004897;
   margin-top: -77px;
@@ -639,6 +703,25 @@ body {
   top: -300px;
 }
 
+@media screen and (max-width: 768px) {
+  .clients-container {
+    max-width: 768px;
+  }
+  .clients-box {
+    display: block;
+  }
+  .clients-box_card {
+    margin-left: 0;
+    margin-bottom: 30px;
+  }
+  .arrow-left {
+    display: none;
+  }
+  .arrow-right {
+    display: none;
+  }
+}
+
 .footer {
   margin-top: -23px;
   background-color: #00264F;
@@ -676,5 +759,44 @@ body {
   margin-top: 0;
   background-color: #fff;
   padding-bottom: 150px !important;
+}
+
+@media screen and (max-width: 768px) {
+  .footer__label > input {
+    margin-bottom: 20px;
+    padding: 15px 320px 15px 13px;
+  }
+  .footer__label > input::-webkit-input-placeholder {
+    color: #00264F;
+  }
+  .footer__label > input:-ms-input-placeholder {
+    color: #00264F;
+  }
+  .footer__label > input::-ms-input-placeholder {
+    color: #00264F;
+  }
+  .footer__label > input::placeholder {
+    color: #00264F;
+  }
+  .footer__message {
+    margin-top: 0;
+    background-color: #fff;
+    padding-bottom: 150px !important;
+  }
+}
+
+body {
+  font-family: 'Raleway';
+}
+
+.container {
+  max-width: 1120px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 748px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
