--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,11 @@
- @import "./normalize";
- 
+@import "./normalize";
+@import "./block/header";
+@import "./block/hero";
+@import "./block/description";
+@import "./block/clients";
+@import "./block/footer";
+
+
  body{
    font-family: 'Raleway';
  }
@@ -7,321 +13,12 @@
  .container{
    max-width: 1120px;
    margin: 0 auto;
- }
+  }
 
- .site-header{
-   margin-top: 20px;
-    padding-bottom: 20px;
-    display: flex;
-    align-items: center;
+ @media screen and (max-width:768px) {
 
-    &__img{
-      margin-right: auto;
-      width: 233px;
-      height: 62.6px;
-    }
-
-    &_logo>img{
-      margin-right: 45px;
-    }
+  .container{
+    max-width: 748px;
+  }
 
  }
-
-
- .nav{
-   background-color: #004897;
-  
-}
-
-.site-nav{
-  display: flex;
-  align-items: center;
-
-  &__list{
-    display: flex;
-    align-items: center;
-    list-style-type: none;
-    width: 40%;
-    justify-content: space-between;
-    margin-right: auto;
-    margin-left: -40px;
-  }
-  
-  &__item{
-    padding: 27px 20px 35px 12px;
-    width: 89px;
-    &>a{
-      color: white;
-      text-decoration: none;
-    }
-
-    &:hover{
-      background-color: #F95252;
-    }
-
-  }
-
-  &__search{
-    border: solid 1px rgb(164, 161, 161);
-    border-radius: 10px;
-    background-color: #fff;
-    &-input{
-        width: 270px;
-        outline: none;
-        border: none;
-        padding: 10px 0 12px 10px;
-        border-radius: 10px;
-      }
-
-  }
-
-}
-
-.fa-search{
-position: relative;
-left: -20px;
-}
-
-
-.main{
-  margin-top: -100px;
-  background-size: cover;
-  background-image: url('/img/header/pictures.png');
-  background-repeat: no-repeat;
-  padding: 244px 0 289px 0;
-  background-position: -150px 100px;
-  
-  &__title{
-    text-transform: uppercase;
-    left:00px;
-    text-align: center;
-    font-size: 150px;
-    color: white;
-    font-weight: 800; 
-  }
-
-  &__img{
-    position: relative;
-    left: 180px;
-    top: -90px;
-  }
-
-
-  &-arrow{
-    color: white;
-    font-weight: 700;
-    opacity: 0.8;
-    font-size: 100px;
-  
-      &-position1{
-        position: absolute;
-        top: 380px;
-        left: 1180px;
-      }
-      
-      &-position2{
-        position: absolute;
-        top: 380px;
-        left:30px;
-      }
-
-
-
-  }
-
-}
-
-.description{
-  padding: 50px 0 77px 0;
-  &-box{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  &__img{
-    border-radius: 25px;
-  }
-
-  &_card{
-    text-align: center;
-    width: 320px;
-
-    &__title{
-      font-size: 30px;
-      font-weight: 700;
-      margin-top: 24px;
-      margin-bottom: -20px;
-    }
-    
-    &__text{
-      font-size: 25px;
-      line-height: 29.35px;
-    }
-
-    &__img{
-      width: 195px;
-      height: 151px;
-    }
-      
-  }
-  }
-
-  &-data{
-
-    background-color: #F95252;
-    &-container{
-      padding: 31px 0 60px 0 ;
-      display: flex;
-    }
-
-    &-content{
-      margin-left: 30px;
-    }
-
-    &__title{
-      color: white;
-      font-size: 36px;
-      margin-top: 0px;
-      text-transform: uppercase;
-    }
-   
-    &__text{
-      width: 500px;
-      color: white;
-      font-size: 18px;
-      line-height: 29px;
-    }
-
-    &__button{
-      display: inline-block;
-      text-transform: uppercase;
-      text-decoration: none;
-      padding: 27px 66px;
-      margin-top: 90px;
-      background-color: #fff;
-      color: #F95252;
-      border-radius: 25px;
-      font-size: 25px;
-      font-weight: 700;
-      
-      &:hover{
-        background-color: #004897;
-        color: white;
-    
-      }
-
-    }
-
-  }
-
-}
-
-
-
-.clients{
-  background-color: #004897;
-  margin-top: -77px;
-  color: white;
-  text-align: center;
-  padding-top: 51px;
-
-  &__title{
-  font-size: 65px;  
-  font-weight: 800;
-  }
-
-  &-box{
-    display: flex;
-    align-items: center;
-    padding-bottom: 30px;
-    &_card{
-      text-align: left;
-      background-color: #fff;
-      color: black;
-      border-radius: 25px;
-      margin-left: 20px;
-      padding: 10px 42px 12px 33px;
-
-      &__text{
-        
-        font-size: 18px;
-        font-weight: 500;
-        line-height: 21px;
-        
-      }
-
-    
-      &-content{
-        display: flex;
-        align-items: center;
-
-        &>img{
-          background-color: #C4C4C4;
-          border-radius: 50%;
-          padding: 20px ;
-          margin-right: 27px;   
-        }
-
-
-
-      }
-  
-    
-    }
-    
-  }
-
-}
-
-.arrow-left{
-  color: white;
-  font-weight: 700;
-  opacity: 0.8;
-  font-size: 100px;
-  position: relative;
-  left: -600px;
-  top: 400px;
-
-}
-
-.arrow-right{
-  color: white;
-  font-weight: 700;
-  opacity: 0.8;
-  font-size: 100px;
-  position: relative;
-  left: 600px;
-  top: -300px;
-}
-
-.footer{
-  margin-top: -23px;
-  background-color: #00264F;
-  padding: 60px;
-  text-align: center;
-  color: white;
-
-  &__label>input{
-    display: block;
-    margin: 0 auto;  
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 10px;
-    padding: 15px 470px 15px 13px;
-
-    &::placeholder{
-      color: #00264F;
-    }
-
-  }
-  
-
- &__message{
-  margin-top: 0;
-  background-color: #fff;
-  padding-bottom: 150px !important;
-}
-
-
-} 
-
